layout bug on profile page when logged out

--- a/apparelrow/media/src/partials/_application.sass
+++ b/apparelrow/media/src/partials/_application.sass
@@ -1443,7 +1443,7 @@ ul.suggested-friends
 #profile-nav
   +clearfix
   position: relative
-  margin-top: 1em
+  padding-top: 1em
   ul
     +horizontal-list(0)
     display: inline
